--- a/Client/Nexus.Client.csproj
+++ b/Client/Nexus.Client.csproj
@@ -30,13 +30,13 @@
         <Exec Command="npm install" />
         <Touch Files="$(NpmLastInstall)" AlwaysCreate="true" />
     </Target>
-
+    
     <!-- <Exec Command="npm run buildcss:dev" Condition=" '$(Configuration)' == 'Debug' AND !Exists('$(ProjectDir)wwwroot\css\app.css') " />
     <Exec Command="npx postcss $(ProjectDir)obj\$(ConfigurationName)\net6.0\scopedcss\bundle\$(ProjectName).styles.css -r" /> -->
-    <Target Name="BuildCSS" BeforeTargets="Compile">
+    <!-- <Target Name="BuildCSS" BeforeTargets="Compile">
         <Message Importance="High" Text="Runing buildcss. You must run 'npm run buildcss:watch' in a seperate terminal for Tailwind JIT to work."></Message>
         <Exec Command="npm run buildcss:dev" Condition=" '$(Configuration)' == 'Debug' " />
         
         <Exec Command="npm run buildcss:release" Condition=" '$(Configuration)' == 'Release' " />
-    </Target>
+    </Target> -->
 </Project>
