--- a/Client/package.json
+++ b/Client/package.json
@@ -11,15 +11,12 @@
     },
     "devDependencies": {
         "@tailwindcss/forms": "^0.3",
-        "autoprefixer": "^10",
-        "cross-env": "^7",
-        "cssnano": "^5",
-        "postcss": "^8.3.5",
-        "postcss-import": "^14",
-        "postcss-cli": "^8",
-        "tailwind-watch": "^0.0.6",
-        "tailwindcss": "^2",
-        "tailwindcss-textshadow": "2",
-        "watch": "^1.0.2"
+        "autoprefixer": "^10.2",
+        "cssnano": "^5.0",
+        "postcss": "^8.3",
+        "postcss-import": "^14.0",
+        "postcss-cli": "^8.3",
+        "tailwindcss": "^2.2",
+        "tailwindcss-textshadow": "2.1"
     }
 }
