--- a/Server/Properties/launchSettings.json
+++ b/Server/Properties/launchSettings.json
@@ -10,13 +10,13 @@
   "profiles": {
     "Nexus.Server": {
       "commandName": "Project",
-      "launchBrowser": true,
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "inspectUri": "{wsProtocol}://{url.hostname}:{url.port}/_framework/debug/ws-proxy?browser={browserInspectUri}",
-      "applicationUrl": "http://localhost:5000;https://localhost:5001",
-      "dotnetRunMessages": true
+      "applicationUrl": "http://localhost:5000",
+      "dotnetRunMessages": true,
+      "launchBrowser": true
     },
     "IIS Express": {
       "commandName": "IISExpress",
