--- a/Client/Nexus.Client.csproj
+++ b/Client/Nexus.Client.csproj
@@ -2,11 +2,8 @@
 
     <PropertyGroup>
         <TargetFramework>net6.0</TargetFramework>
+        <Nullable>enable</Nullable>
     </PropertyGroup>
-
-    <ItemGroup>
-      <None Include="wwwroot\css\bootstrap\bootstrap.min.css.map" />
-    </ItemGroup>
 
     <ItemGroup>
         <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="6.0.0-preview.5.21301.17" />
@@ -15,6 +12,10 @@
 
     <ItemGroup>
         <ProjectReference Include="..\Shared\Nexus.Shared.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Content Remove="package-lock.json" />
     </ItemGroup>
 
     <Target Name="CheckForNpm" BeforeTargets="NpmInstall">
