--- a/Client/Nexus.Client.csproj
+++ b/Client/Nexus.Client.csproj
@@ -3,6 +3,7 @@
     <PropertyGroup>
         <TargetFramework>net6.0</TargetFramework>
         <Nullable>enable</Nullable>
+        <ServiceWorkerAssetsManifest>service-worker-assets.js</ServiceWorkerAssetsManifest>
     </PropertyGroup>
 
     <ItemGroup>
@@ -15,7 +16,15 @@
     </ItemGroup>
 
     <ItemGroup>
+        <ServiceWorker Include="wwwroot\service-worker.js" PublishedContent="wwwroot\service-worker.published.js" />
+    </ItemGroup>
+    
+    <ItemGroup>
       <Content Remove="package-lock.json" />
+    </ItemGroup>
+    
+    <ItemGroup>
+      <Folder Include="wwwroot\css" />
     </ItemGroup>
 
     <Target Name="CheckForNpm" BeforeTargets="NpmInstall">
