--- a/Client/Nexus.Client.csproj
+++ b/Client/Nexus.Client.csproj
@@ -4,7 +4,7 @@
         <TargetFramework>net6.0</TargetFramework>
         <Nullable>enable</Nullable>
         <ServiceWorkerAssetsManifest>service-worker-assets.js</ServiceWorkerAssetsManifest>
-        <RunAOTCompilation>true</RunAOTCompilation>
+        <!-- <RunAOTCompilation>true</RunAOTCompilation> -->
     </PropertyGroup>
 
     <ItemGroup>
